--- a/TF_ANN_1.ipynb
+++ b/TF_ANN_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TF ANN 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrznco3gsyOOU/ZGFAjhPo",
+      "authorship_tag": "ABX9TyNB3kF4oSxEqMTFNkO6Loxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FjTg3j5E2WYt"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n"
       ]
     },
     {
